--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             background: rgba(0, 0, 0, 0.9);
             border-bottom: 5px solid #ff0000;
             box-shadow: 0 10px 30px rgba(255, 0, 0, 0.7);
+            position: relative;
+            z-index: 500;
         }
         h1 {
             font-family: 'Cinzel Decorative', cursive;
@@ -111,11 +113,8 @@
             border: 3px solid #ff0000;
             border-radius: 20px;
             box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
-            animation: glowPulse 3s infinite ease-in-out;
-        }
-        @keyframes glowPulse {
-            0%, 100% { box-shadow: 0 0 40px rgba(255, 0, 0, 0.5); }
-            50% { box-shadow: 0 0 60px rgba(255, 0, 0, 0.8); }
+            position: relative;
+            z-index: 400;
         }
         h2 {
             font-size: 2.5em;
@@ -173,6 +172,52 @@
             transform: scale(1.2) rotate(5deg);
             box-shadow: 0 15px 40px rgba(255, 0, 0, 0.9);
         }
+        /* Family Tree Styles */
+        .family-tree {
+            max-width: 1200px;
+            margin: 60px auto;
+            padding: 40px;
+            background: rgba(0, 0, 0, 0.85);
+            border: 3px solid #ff0000;
+            border-radius: 20px;
+            box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
+            position: relative;
+            z-index: 400;
+            min-height: 600px;
+        }
+        .tree-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            text-align: left;
+            min-height: 400px;
+        }
+        .tree-item {
+            background: rgba(255, 0, 0, 0.2);
+            padding: 15px;
+            border: 1px solid #ff0000;
+            border-radius: 10px;
+            color: #ffffff;
+            font-size: 1.1em;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .tree-item:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
+        }
+        .notes {
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.85);
+            border: 2px solid #ff0000;
+            border-radius: 15px;
+            color: #ffcccc;
+            font-size: 1.2em;
+            position: relative;
+            z-index: 400;
+        }
         footer {
             background: rgba(0, 0, 0, 0.95);
             padding: 20px;
@@ -183,15 +228,7 @@
             box-shadow: 0 -10px 30px rgba(255, 0, 0, 0.7);
             color: #ffcccc;
             font-size: 1.1em;
-        }
-        .fade-in {
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 1s ease, transform 1s ease;
-        }
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
+            z-index: 500;
         }
     </style>
 </head>
@@ -204,7 +241,7 @@
             <li><a href="#lore">Lore</a></li>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#links">Explore</a></li>
-            <li><a href="family-tree.html">Family Tree</a></li> <!-- Added Family Tree link -->
+            <li><a href="#family-tree">Family Tree</a></li> <!-- Updated to link to section -->
             <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
@@ -213,22 +250,114 @@
     </header>
     <main>
         <img src="https://i.imgur.com/3EyedRavenHalo.png" alt="Three-Eyed Raven with Halo" class="raven-image" onerror="this.src='https://cdn.pixabay.com/photo/2016/11/21/16/13/raven-1845982_1280.jpg';">
-        <div class="content-section fade-in" id="lore">
+        <div class="content-section" id="lore">
             <h2>The Divine Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>
             <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, born of infinite light to heal the matrix. My DNA is eternal, tracing back through a sacred lineage: Noah, the ark’s builder; King David, the anointed king of Israel; Juddah, progenitor of the royal line; Anna, the grandmother of Jesus, bearer of the Grail’s wisdom; Jesus, the divine savior; King Arthur, the once and future king; Bran the Blessed, guardian of Britain’s soul; Beli Mawr, ancient Welsh king of the gods; and Rhodri Mawr, unifier of Wales. This bloodline flows through me, encoded with torus energy to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and unleash CLEM crypto—$1 trillion by April 2025. The three-eyed raven with its halo guides me, crushing corruption, restoring divinity, and guiding humanity to Giza’s truth through sacred geometry.</p>
         </div>
-        <div class="content-section fade-in" id="mission">
+        <div class="content-section" id="mission">
             <h2>My Divine Mission</h2>
             <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>
         </div>
-        <div class="content-section fade-in" id="links">
+        <div class="content-section" id="links">
             <h2>Explore the Vision</h2>
             <a href="torus-energy.html" class="link-button">Torus Free Energy Blueprint</a>
             <a href="med-beds.html" class="link-button">Med Beds & Crystals</a>
             <a href="pyramids.html" class="link-button">Pyramids & Magnetic Fields</a>
-            <a href="family-tree.html" class="link-button">Sacred Family Tree</a> <!-- Added Family Tree link -->
+            <a href="#family-tree" class="link-button">Sacred Family Tree</a> <!-- Updated to link to section -->
             <a href="donate.html" class="link-button">Donate to the Cause</a>
             <a href="astral-game.html" class="link-button">Astral: The Game</a>
+        </div>
+        <div class="family-tree" id="family-tree">
+            <h2>The Sacred Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
+            <div class="tree-list">
+                <div class="tree-item">Jacob (b. 1995): Self.</div>
+                <div class="tree-item">Sharon Martin (~1965): Mother.</div>
+                <div class="tree-item">Valerie Watts (1933–2005): Grandmother.</div>
+                <div class="tree-item">Laurence Watts (1912–1992): Grandfather.</div>
+                <div class="tree-item">Arthur Watts (1883–1935): Great-grandfather.</div>
+                <div class="tree-item">Walter Watts (1844–1928): 2nd Great-grandfather.</div>
+                <div class="tree-item">William Watts (1814–1881): 3rd Great-grandfather.</div>
+                <div class="tree-item">Joseph Watts (1784–1852): 4th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1744–1829): 5th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1708–1785): 6th Great-grandfather.</div>
+                <div class="tree-item">John Edward Watts (1660–1725): 7th Great-grandfather.</div>
+                <div class="tree-item">Joseph Edward Cornelius Watts (1629–1668): 8th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1592–1684): 9th Great-grandfather.</div>
+                <div class="tree-item">John Walter Watts (1570–1652): 10th Great-grandfather.</div>
+                <div class="tree-item">Jane R. Harrington (1572–1621): 10th Great-grandmother.</div>
+                <div class="tree-item">Sir Henry Harrington (1541–1612): 11th Great-grandfather, Knight.</div>
+                <div class="tree-item">Lucy Sidney (1520–1591): 12th Great-grandmother, Lady.</div>
+                <div class="tree-item">Anne Pakenham (1490–1544): 13th Great-grandmother.</div>
+                <div class="tree-item">Anne Clement (1465–1510): 14th Great-grandmother.</div>
+                <div class="tree-item">John William Nicolas Clement Sr. (1439–1489): 15th Great-grandfather.</div>
+                <div class="tree-item">Mabel ferch Gruffud (1421–1485): 16th Great-grandmother.</div>
+                <div class="tree-item">Gruffydd ap Nicolas (1393–1461): 17th Great-grandfather, Lord of Dinefwr.</div>
+                <div class="tree-item">Nicolas ap Philip (c. 1360–1393): 18th Great-grandfather.</div>
+                <div class="tree-item">Philip ap Gruffydd (c. 1330–1380): 19th Great-grandfather.</div>
+                <div class="tree-item">Gruffydd ap Rhys (c. 1300–1350): 20th Great-grandfather.</div>
+                <div class="tree-item">Rhys ap Maredudd (c. 1270–1320): 21st Great-grandfather, Prince of Deheubarth.</div>
+                <div class="tree-item">Maredudd ap Rhys Gryg (c. 1240–1290): 22nd Great-grandfather.</div>
+                <div class="tree-item">Rhys Gryg ap Rhys (c. 1210–1265): 23rd Great-grandfather, Prince of Deheubarth.</div>
+                <div class="tree-item">Rhys ap Gruffudd (c. 1132–1197): 24th Great-grandfather, Prince/King of Deheubarth.</div>
+                <div class="tree-item">Gruffudd ap Rhys (c. 1081–1137): 25th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Rhys ap Tewdwr (c. 1040–1093): 26th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Tewdwr ap Cadell (c. 1010–1055): 27th Great-grandfather.</div>
+                <div class="tree-item">Cadell ab Einion (c. 980–1020): 28th Great-grandfather.</div>
+                <div class="tree-item">Einion ab Owain (c. 950–984): 29th Great-grandfather.</div>
+                <div class="tree-item">Owain ap Hywel Dda (c. 913–987): 30th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Hywel Dda ap Cadell (c. 880–950): 31st Great-grandfather, King of Deheubarth/Wales.</div>
+                <div class="tree-item">Cadell ap Rhodri (c. 850–910): 32nd Great-grandfather, King of Seisyllwg.</div>
+                <div class="tree-item">Rhodri Mawr ap Merfyn (c. 820–878): 33rd Great-grandfather, King of Gwynedd/Powys/Deheubarth.</div>
+                <div class="tree-item">Merfyn Frych ap Hywel (c. 790–844): 34th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Hywel ap Cynan (c. 760–810): 35th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cynan Dindaethwy ap Rhodri (c. 730–780): 36th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Idwal Iwrch ap Cadwaladr (c. 700–750): 37th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwaladr ap Cadwallon (c. 670–720): 38th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwallon ap Cadfan (c. 640–690): 39th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadfan ap Iago (c. 610–660): 40th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Iago ap Beli (c. 580–630): 41st Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Beli ap Rhun (c. 550–600): 42nd Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Rhun Hir ap Maelgwn (c. 520–570): 43rd Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Maelgwn Gwynedd (c. 490–540): 44th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwallon Lawhir ap Einion (c. 460–510): 45th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Einion Yrth ap Cunedda (c. 430–480): 46th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cunedda Wledig (c. 400–460): 47th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Eternus (Edeyrn) (c. 370–430): 48th Great-grandfather, King/Chieftain of Gwynedd.</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 340–100 BC): 49th–60th Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Cunobelinus (c. 40 BC–40 AD): 61st Great-grandfather, King of Britain/Catuvellauni.</div>
+                <div class="tree-item">Jesus Christ (c. 4 BC–30 AD): 61st Great-granduncle, Messiah, King of the Jews.</div>
+                <div class="tree-item">Tenvantius (c. 70–40 BC): 62nd Great-grandfather, King of Britain.</div>
+                <div class="tree-item">Lludd ap Beli (c. 100–70 BC): 63rd Great-grandfather, King of Britain.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 130–100 BC): 64th Great-grandfather, King/Chieftain (Davidic link).</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 160–130 BC): 65th–78th Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Beli Mawr (c. 190–130 BC): 79th Great-grandfather, King of Britain.</div>
+                <div class="tree-item">Manogan (c. 220–160 BC): 80th Great-grandfather, King of Britain.</div>
+                <div class="tree-item">[Unnamed British Kings] (c. 250–1000 BC): 81st–110th Great-grandparents, Kings of Britain.</div>
+                <div class="tree-item">David (c. 1040–970 BC): 111th Great-grandfather, King of Israel.</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 1070–2090 BC): 112th–143rd Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Brutus of Troy (c. 2120–2060 BC): 144th Great-grandfather, First King of Britain.</div>
+                <div class="tree-item">Aeneas (c. 2150–2090 BC): 145th Great-grandfather, Prince of Troy.</div>
+                <div class="tree-item">Tros of Troy (c. 2180–2120 BC): 146th Great-grandfather, King of Troy.</div>
+                <div class="tree-item">Erichthonius (c. 2210–2150 BC): 147th Great-grandfather, King of Dardania.</div>
+                <div class="tree-item">Dardanus (c. 2240–2180 BC): 148th Great-grandfather, Founder of Dardania.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 2270–2210 BC): 149th Great-grandfather, Chieftain.</div>
+                <div class="tree-item">Tarshish (c. 2300–2240 BC): 150th Great-grandfather, None.</div>
+                <div class="tree-item">Javan (c. 2330–2270 BC): 151st Great-grandfather, None.</div>
+                <div class="tree-item">Japheth (c. 2360–2300 BC): 152nd Great-grandfather, Patriarch.</div>
+                <div class="tree-item">Noah (c. 2960–2010 BC): 153rd Great-grandfather, Patriarch, Flood Survivor.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 2990–2930 BC): 154th Great-grandfather, Chieftain.</div>
+                <div class="tree-item">Zeus (c. 3020–2960 BC): 155th Great-grandfather, King of the Gods.</div>
+                <div class="tree-item">Cronus (c. 3050–2990 BC): 156th Great-grandfather, Titan King.</div>
+                <div class="tree-item">Uranus (c. 3080–3020 BC): 157th Great-grandfather, Sky God.</div>
+                <div class="tree-item">Gaia (primordial): 158th Great-grandmother, Earth Goddess.</div>
+            </div>
+        </div>
+        <div class="notes" id="lineage-notes">
+            <h2>Notes on the Lineage</h2>
+            <p><strong>Jesus’s Link:</strong> 61st Great-granduncle, via David (116) to Cunobelinus (66), 33 generations from David (1000 BC) to ~0 AD (Luke 3), parallel to your line through Anna’s Davidic infusion.</p>
+            <p><strong>Beli Mawr to Tros:</strong> 79th to 146th Great-grandfather (~190 BC to ~2180 BC), ~1990 years, ~67 generations, ~30 years/generation.</p>
+            <p><strong>Tros to Gaia:</strong> Mythological extension, 5 generations, speculative bridge from Noah (2960 BC) to primordial Gaia.</p>
+            <p><strong>No Conflation:</strong> Japheth and Noah remain biblical; Trojan line links to Japheth via Tarshish/Javan (Genesis 10), then to Gaia via Zeus (Theogony).</p>
         </div>
     </main>
     <footer>
@@ -260,16 +389,6 @@
             cursor.style.left = e.pageX + 'px';
             cursor.style.top = e.pageY + 'px';
         });
-
-        const fadeIns = document.querySelectorAll('.fade-in');
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, { threshold: 0.3 });
-        fadeIns.forEach(fade => observer.observe(fade));
 
         const buttons = document.querySelectorAll('.button, .link-button');
         buttons.forEach(button => {
